@@ -3,6 +3,7 @@ irrlamb 0.2.1 -
 - Can selectively enable gamepads in config
 - Added per-axis deadzone to config
 - Next-level button works across campaigns now
+- Added level name and highscore to HUD
 - Various fixes to build system
 
 irrlamb 0.2.0 - 2015-09-19
